
      - Fixed bug in XML export (to_xml()) of Link objects, escaping 
        (entitizing) title and url properly now.

      - Removed quote (probably typo) from some JS string in lookupwindowfield.

      - There was a bug in the cleanup script listed in MAINTENANCE.txt,
        fixed.

      - Shut up a security deprecation warning for PROPFIND.

    Ported from 1.5 branch
    
      - Fixed issue 1608 where tab_edit_revoke_approval caused versioning errors

      - In the tab_status "set timings" caused an error without saving the changes and returned a wrong tab   
    
      - XML export rewrote the urls of links and images on export, which
        was a bad thing. They now have extra rewritten_ attributes, which
        are only used by the xslt rendering.      

      - XML export of Silvadocuments with images that have no link attribute
        was broken.

      - The full media export now uses a tempfile instead of an in memory 
        stringIO to build the zipfile, hopefully improving memory
        footprint.

      - Added an extra note on zope.i18n.translate to
        doc/developer_changes.txt.

      - Ghostfolders exported haunted content, which broke asset ids in the
        zip. Since this content was ignored on import it is no longer 
        exported.

      - Explicitly delete model from request in view_version() to break a
        cyclic reference that prevents model from being garbage collected.

      - Add ZCatalog index upgrader to comply with an API change in Zope.

      - The new lookup window was registering resources under the name
        scripts. This name is too broad and was in fact being
        overridden by a Silva extension that introduced its own
        scripts, causing the Silva core to break. Renamed this to
        silva_scripts in the core.
     
      - The cropping dialog was broken, fixed.

      - Fixed non-interpolation issues with message ids in the image
        UI.
