@@ -146,6 +146,9 @@ Under development
 
     Ported from 1.5 branch
     
+      - Added a ReferenceLookupWindowField, to store references to zope
+        objects instead of urls.
+    
       - Fixed issue 1608 where tab_edit_revoke_approval caused versioning errors
 
       - In the tab_status "set timings" caused an error without saving the changes and returned a wrong tab   
